# spi-flash-programmer

./: .gitmodules  README.md
cmake/: version.txt
common/: CMakeLists.txt
common/include/: crc8.h  protocol.h
common/include/common/: crc8.h  protocol.h
common/include/common/protocol/: packet.h  request.h  response.h
common/include/common/protocol/deserializer/: request.h  response.h
common/src/: crc8.c
common/src/common/: crc8.c
common/src/common/protocol/: common.c  common.h  packet.c  request.c  response.c  server.c
common/src/common/protocol/deserializer/: request.c
firmware/: Makefile  build_dist.sh
firmware/arduino/: CMakeLists.txt  Makefile  build_dist.sh  burn.sh
firmware/arduino/src/: main.c
firmware/common/: CMakeLists.txt
firmware/common/include/firmware/: programmer.h
firmware/common/src/: programmer.c
firmware/common/src/firmware/: programmer.c
firmware/common/test/: protocol.cpp
firmware/rpi-pico/: CMakeLists.txt  README.md
firmware/rpi-pico/src/: main.c  usb_descriptors.c
firmware/rpi-zero/: CMakeLists.txt  README.md
firmware/rpi-zero/include/: tusb_config.h
firmware/rpi-zero/src/: main.c
firmware/src/: main.c
flashutil/: CMakeLists.txt  Makefile  vcpkg.json
flashutil/cmake/: submodules.txt  vcpkg.txt
flashutil/etc/: chips.json
flashutil/include/: Interface.h  SpiFlashDevice.h  SpiInterface.h  debug.h  exception.h  flash.h  programmer.h  serial.h  spi.h
flashutil/include/common/: buffer.h  debug.h  utils.h
flashutil/include/flash/: builder.h  chip.h  geometry.h  id.h  library.h  opcode.h  operations.h  registry.h  spec.h
flashutil/include/flash/operations/: basic.h  generic.h
flashutil/include/flashutil/: debug.h  entryPoint.h  exception.h  flash.h  programmer.h  serial.h  spi.h
flashutil/include/flashutil/flash/: builder.h  registry.h  status.h
flashutil/include/flashutil/flash/registry/: reader.h
flashutil/include/flashutil/flash/registry/reader/: json.h
flashutil/include/flashutil/serial/: hw.h
flashutil/include/flashutil/spi/: creator.h  serial.h
flashutil/include/programmer/: chipInfo.h  spi.h
flashutil/include/programmer/spi/: commands.h  interface.h  serial.h
flashutil/include/spi/: creator.h
flashutil/src/: debug.c  flash.cpp  main.c  main.cpp  programmer.cpp  serial-boost.cpp  serial-unix.c  serial.c  serial.cpp  spi.cpp
flashutil/src/common/: debug.c
flashutil/src/flash/: builder.cpp  registry.cpp
flashutil/src/flash/chip/: mx25l2005.cpp
flashutil/src/flash/operations/: generic.cpp
flashutil/src/flashutil/: debug.c  entryPoint.cpp  flash.cpp  main.cpp  programmer.cpp  spi.cpp
flashutil/src/flashutil/flash/: builder.cpp  registry.cpp  status.cpp
flashutil/src/flashutil/flash/registry/reader/: json.cpp
flashutil/src/flashutil/serial/: hw.cpp
flashutil/src/flashutil/spi/: creator.cpp  serial.cpp
flashutil/src/flashutil/spi/impl/: serial.cpp  serial.h
flashutil/src/flashutil/spi/impl/serial/: serial.cpp  serial.h
flashutil/src/programmer/: spi.cpp
flashutil/src/programmer/spi/: commands.cpp
flashutil/src/programmer/spi/impl/: serial.cpp  serial.h
flashutil/src/spi/: creator.cpp
flashutil/src/spi/impl/: serial.cpp  serial.h
flashutil/src/spi/impl/serial/: serial.cpp  serial.h
flashutil/test/: test.sh
recipes/firmware/arduino/: CMakeLists.txt
recipes/firmware/rpi_pico/: CMakeLists.txt
recipes/flashutil/: CMakeLists.txt
recipes/tests/: CMakeLists.txt
test/: CMakeLists.txt
test/src/common/: protocol.cpp
test/src/common/protocol/: packet.cpp  request.cpp  response.cpp  stack.cpp
test/src/firmware/: programmer.cpp
test/src/flashutil/: dummySpi.h  programmer.cpp  serialFlash.cpp  serialFlash.h  serialProgrammer.cpp  serialProgrammer.h
